# ccc

./: README.md
No Name Lang/: CMakeLists.txt  README.md  function.nnl  math.nnl  variable.nnl
No Name Lang/src/: codegen.c  codegen.h  environment.c  environment.h  error.c  error.h  file_io.c  main.c  parser.c  parser.h  typechecker.c
Transcend/: CMakeLists.txt  README.md
Transcend/examples/: test.ts
Transcend/src/: TSC.cpp  TSC.h  main.cpp
